# app/models/user.py
@@ -1,8 +1,13 @@
 from app.models.database import db
 
 class User(db.Model):
+    __tablename__ = 'users'
+
     id = db.Column(db.Integer, primary_key=True)
     name = db.Column(db.String(100), nullable=False)
     email = db.Column(db.String(100), unique=True, nullable=False)
-    password = db.Column(db.String(200), nullable=False)
-role = db.Column(db.String(50), nullable=False, default='customer')  # 'customer' ou 'agent'
+    password = db.Column(db.String(255), nullable=False)
+    role = db.Column(db.String(20), nullable=False, default='customer')  # Adicionado o campo 'role'
+
+    def __repr__(self):
+        return f"<User {self.name}>"
